言語セレクタのコードを改善

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,7 +16,7 @@
       </form>
     </div>
   {{end}}
-  {{if ne (len .Translations) 0}}
+  {{if .IsTranslated}}
   <div id="langselector">{{ partial "langselector" . }}</div>
   {{end}}
 </nav>
