--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,4 +1,5 @@
-<div class="admonition note">
-<p class="admonition-title">{{ .Get "title" }}</p>
-<p>{{ printf "%s" .Inner | markdownify }}</p>
-</div>
+<aside class="admonition note">
+  <i class="fas fa-check"></i>
+  {{ if .Get "title" }}<h1 class="admonition-title">{{ .Get "title" }}</h1>{{end}}
+  {{ printf "%s" .Inner | markdownify }}
+</aside>
