--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -204,7 +204,7 @@ hr{border:0;border-top:1px solid rgba(0,0,0,.12)}
 .button .icon{border-radius:100%}
 .button .icon:active{background:hsla(0,0%,100%,.12)}
 html{height:100%}
-body{position:relative;min-height:100%}
+body{position:relative;min-height:calc(100% - 56px);}
 /*hr{display:block;height:1px;padding:0;margin:0}*/
 /*.locked{height:100%;overflow:hidden}*/
 .scrollable{position:absolute;top:0;right:0;bottom:0;left:0;overflow:auto;-webkit-overflow-scrolling:touch}
@@ -342,7 +342,11 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 /*.admonition .admonition-title:before{content:"\e611";display:block;float:left;font-family:Icon;font-size:24px;vertical-align:-.1em;margin-right:5px}*/
 /*.admonition.warning .admonition-title:before{content:"\e610"}*/
 
-.article .wrapper{padding:0px 16px 92px;margin-top: 18px;}
+.article .wrapper{
+  padding:0px 16px 92px;
+  margin-top: 18px;
+  position: relative;
+}
 .ios.standalone .article{position:absolute;top:56px;right:0;bottom:0;left:0;overflow:auto;-webkit-overflow-scrolling:touch}
 .ios.standalone .article .wrapper{position:relative;min-height:100%;padding-top:60px;margin-bottom:2px}
 .article h1{font-size:2.7rem;line-height:1.2em;margin:42px 0 30px;font-weight: 700;}
@@ -403,7 +407,9 @@ h1 .article .headerlink{display:none}
 .article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
 .article .data table{display:inline-block;margin:0 16px;text-align:left}
 .nextpage {
-  margin-top: 69px;
+  position: absolute;
+  bottom: 33px;
+  width: 100%;
   display: -webkit-flex;
   display: flex;
   -webkit-justify-content: space-between;
@@ -708,6 +714,7 @@ ul.breadcrumbs {
     .main { flex-direction: row; }
     .article { width: 820px; margin-left: 280px; margin-bottom: 92px;}
     .drawer { width: 280px; position:fixed; padding-bottom: 100px}
+
 /*    .backdrop{background:#f2f2f2}
     .backdrop-paper:after{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05)}*/
 }
