--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -12,7 +12,7 @@
     {{ if eq .p1 .p2 }}
         {{- .p1.Title -}}
     {{else}}
-      <a href="{{- .p1.Permalink -}}">{{- .p1.Title -}}</a>&nbsp;>
+      <a href="{{- .p1.Permalink -}}">{{- .p1.Title -}}</a>&nbsp;>&nbsp;
     {{ end }}
 </li>
 {{- end -}}
