トップページの表示を調整

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,9 +8,9 @@
     <main class="main">
         <article class="article" >
             <div class="wrapper">
-              <div class="col-flex">
+              <nav class="col-flex">
                     {{ .Content }}
-              </div>
+              </nav>
             </div>
         </article>
     </main>
