--- a/layouts/shortcodes/tile.html
+++ b/layouts/shortcodes/tile.html
@@ -1,23 +1,18 @@
 <div class="col-tile">
-    <div class="tile-left">
+    {{- .Scratch.Set "target" "_self" -}}
+    {{- if eq (.Get "external") "true" -}}
+        {{- $.Scratch.Set "target" "_blank" -}}
+    {{- end -}}
+    <a class="{{- .Get "link_class" -}}" href="{{- .Get "link_href" -}}" target="{{ .Scratch.Get "target" }}"></a>
         <div class="tile-title">{{- .Get "title" -}}</div>
         {{- if (.Get "title2") -}}
         <div class="tile-title">{{- .Get "title2" -}}</div>
         {{- end -}}
-            <div class="tile-link">
+        <div class="tile-link">
             {{- if eq (.Get "pdf_icon") "true" -}}
             <span class="fa fa-file-pdf-o"></span>
             {{- end -}}
-            
-            {{- .Scratch.Set "target" "_self" -}}
-            {{- if eq (.Get "external") "true" -}}
-                {{- $.Scratch.Set "target" "_blank" -}}
-            {{- end -}}
-            
-            <a class="{{- .Get "link_class" -}}" href="{{- .Get "link_href" -}}" target="{{ .Scratch.Get "target" }}">{{- .Get "link_text" -}}</a>
+            {{- .Get "link_text" -}}<i class="fa fa-chevron-right" aria-hidden="true"></i>
         </div>
-    </div>
-    <div class="tile-right">
             <img class="tile-img" src="{{- .Get "img_src" -}}" alt="{{- .Get "img_alt" -}}"></img>
-    </div>
 </div>
