--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -46,21 +46,21 @@ pre,pre code{color:rgba(0,0,0,.87)}
 .icon-star:before{content:"\e609"}
 .icon-warning:before{content:"\e610"}
 .icon-note:before{content:"\e611"}*/
-a{-webkit-transition:color .25s;transition:color .25s}
+/*a{-webkit-transition:color .25s;transition:color .25s}*/
 /*.overlay{-webkit-transition:opacity .25s,width 0s .25s,height 0s .25s;transition:opacity .25s,width 0s .25s,height 0s .25s}*/
-#toggle-drawer:checked~.overlay,.toggle-drawer .overlay{-webkit-transition:opacity .25s,width 0s,height 0s;transition:opacity .25s,width 0s,height 0s}
+/*#toggle-drawer:checked~.overlay,.toggle-drawer .overlay{-webkit-transition:opacity .25s,width 0s,height 0s;transition:opacity .25s,width 0s,height 0s}
 .js .header{-webkit-transition:background .6s,color .6s;transition:background .6s,color .6s}
 .js .header:before{-webkit-transition:background .6s;transition:background .6s}
-.button .icon{-webkit-transition:background .25s;transition:background .25s}
+.button .icon{-webkit-transition:background .25s;transition:background .25s}*/
 body{color:#333;}
 /*@supports (-webkit-appearance:none){body{background:#e84e40}
 }*/
-.ios body{background:#fff}
+/*.ios body{background:#fff}
 hr{border:0;border-top:1px solid rgba(0,0,0,.12)}
 .toggle-button{cursor:pointer;color:inherit}
-/*.backdrop,.backdrop-paper{background:#fff}*/
+.backdrop,.backdrop-paper{background:#fff}
 .overlay{background:rgba(0,0,0,.54);opacity:0}
-#toggle-drawer:checked~.overlay,.toggle-drawer .overlay{opacity:1}
+#toggle-drawer:checked~.overlay,.toggle-drawer .overlay{opacity:1}*/
 .header{
   width:100%;
 /*  -webkit-user-select:none;
@@ -199,49 +199,50 @@ hr{border:0;border-top:1px solid rgba(0,0,0,.12)}
 /*#langselector:hover .otherlanguage {
   display: block;
 }
-*/.ios.standalone .header:before{background:rgba(0,0,0,.12)}
+*/
+/*.ios.standalone .header:before{background:rgba(0,0,0,.12)}*/
 /*.bar .path{color:hsla(0,0%,100%,.7)}*/
-.button .icon{border-radius:100%}
-.button .icon:active{background:hsla(0,0%,100%,.12)}
+/*.button .icon{border-radius:100%}
+.button .icon:active{background:hsla(0,0%,100%,.12)}*/
 html{height:100%}
 body{position:relative;min-height:calc(100% - 56px);}
 /*hr{display:block;height:1px;padding:0;margin:0}*/
 /*.locked{height:100%;overflow:hidden}*/
 .scrollable{position:absolute;top:0;right:0;bottom:0;left:0;overflow:auto;-webkit-overflow-scrolling:touch}
 .scrollable .wrapper{height:100%}
-.ios .scrollable .wrapper{margin-bottom:2px}
+/*.ios .scrollable .wrapper{margin-bottom:2px}*/
 /*.toggle{display:none}
 .toggle-button{display:block}*/
 /*.backdrop{position:absolute;top:0;right:0;bottom:0;left:0;z-index:-1}
 .backdrop-paper{max-width:1200px;height:100%;margin-left:auto;margin-right:auto}
 .backdrop-paper:after{content:" ";display:block;height:100%;margin-left:262px}*/
 /*.overlay{width:0;height:0;z-index:3}*/
-.header,.overlay{position:fixed;top:0}
-.ios.standalone .header{position:absolute}
+.header{position:fixed;top:0}
+/*.ios.standalone .header{position:absolute}*/
 /*.bar{display:table;max-width:1184px;margin-left:auto;margin-right:auto}
 .bar a{display:block}width:100%;.no-js .bar .button-search{display:none}
 .bar .path .icon:before{vertical-align:-1.5px}*/
-.button{display:table-cell;vertical-align:top;width:1%}
+/*.button{display:table-cell;vertical-align:top;width:1%}
 .button button{margin:0;padding:0}
 .button button:active:before{position:relative;top:0;left:0}
 .button .icon{display:inline-block;font-size:24px;padding:8px;margin:4px}
 .stretch{display:table;table-layout:fixed;width:100%}
 .header .stretch{padding:0 20px}
 .stretch .title{display:table-cell;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}
-.header .stretch .title{font-size:18px;padding:13px 0}
+.header .stretch .title{font-size:18px;padding:13px 0}*/
 .main{display:flex;max-width:1300px;margin:56px auto 0 auto;}
 body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-.no-fontface body,.no-fontface input,body,input{font-family:Helvetica Neue,Helvetica,Arial,sans-serif}
+/*.no-fontface body,.no-fontface input,body,input{font-family:Helvetica Neue,Helvetica,Arial,sans-serif}
 .no-fontface code,.no-fontface kbd,.no-fontface pre,code,kbd,pre{font-family:Courier New,Courier,monospace}
 #toggle-drawer:checked~.main .drawer,.toggle-drawer .drawer{-webkit-transform:translateZ(0);transform:translateZ(0)}
-.no-csstransforms3d #toggle-drawer:checked~.main .drawer,.no-csstransforms3d .toggle-drawer .drawer{display:block}
+.no-csstransforms3d #toggle-drawer:checked~.main .drawer,.no-csstransforms3d .toggle-drawer .drawer{display:block}*/
 /*.project{-webkit-transition:none;transition:none}
 .project .logo img{-webkit-transition:box-shadow .4s;transition:box-shadow .4s}*/
 /*.repo a{-webkit-transition:box-shadow .4s,opacity .4s;transition:box-shadow .4s,opacity .4s}*/
 /*.drawer .toc a.current,.drawer .toc a:focus,.drawer .toc a:hover{color:#e84e40}
 .drawer .anchor a{border-left:2px solid #e84e40}
 .drawer .section{color:rgba(0,0,0,.54)}*/
-.ios.standalone .project:before{background:rgba(0,0,0,.12)}
+/*.ios.standalone .project:before{background:rgba(0,0,0,.12)}*/
 /*.project .logo img{background:#fff;border-radius:100%}
 .project:focus .logo img,.project:hover .logo img{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05)}*/
 /*.repo a{background:#00bfa5;color:#fff;border-radius:3px}
@@ -280,8 +281,8 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .repo a .count{text-transform:none;font-weight:700}*/
 /*pre span{-webkit-transition:color .25s;transition:color .25s}*/
 /*.copyright a{-webkit-transition:color .25s;transition:color .25s}*/
-.ios.standalone .article{background:-webkit-linear-gradient(top,#fff 50%,#e84e40 0);background:linear-gradient(180deg,#fff 50%,#e84e40 0)}
-.ios.standalone .article .wrapper{background:-webkit-linear-gradient(top,#fff 50%,#fff 0);background:linear-gradient(180deg,#fff 50%,#fff 0)}
+/*.ios.standalone .article{background:-webkit-linear-gradient(top,#fff 50%,#e84e40 0);background:linear-gradient(180deg,#fff 50%,#e84e40 0)}
+.ios.standalone .article .wrapper{background:-webkit-linear-gradient(top,#fff 50%,#fff 0);background:linear-gradient(180deg,#fff 50%,#fff 0)}*/
 .article a {color: #2869ab}
 /*.article h1,.article h2{color:#e84e40}*/
 .article code{background:#eee}
@@ -289,7 +290,7 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 /*.article h1{border-bottom:1px solid rgba(0,0,0,.12)}*/
 .article a{border-bottom:1px dotted}
 /*.article a:focus,.article a:hover{color:#00bfa5}*/
-.article .headerlink{color:rgba(0,0,0,.26);border:none}
+/*.article .headerlink{color:rgba(0,0,0,.26);border:none}*/
 /*.article table{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);border-radius:3px}*/
 .article table {
   border-collapse: collapse;
@@ -347,8 +348,8 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
   margin-top: 18px;
   position: relative;
 }
-.ios.standalone .article{position:absolute;top:56px;right:0;bottom:0;left:0;overflow:auto;-webkit-overflow-scrolling:touch}
-.ios.standalone .article .wrapper{position:relative;min-height:100%;padding-top:60px;margin-bottom:2px}
+/*.ios.standalone .article{position:absolute;top:56px;right:0;bottom:0;left:0;overflow:auto;-webkit-overflow-scrolling:touch}
+.ios.standalone .article .wrapper{position:relative;min-height:100%;padding-top:60px;margin-bottom:2px}*/
 .article h1{font-size:2.7rem;line-height:1.2em;margin:42px 0 30px;font-weight: 700;}
 .article h2{font-size:2.5rem;line-height:1.2em;margin:42px 0 30px;}
 .article h3{font-size:2.1rem;line-height:1.2em;margin:42px 0 30px;}
@@ -356,9 +357,9 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .article h5{font-size:1.5rem;line-height:1.2em;margin:42px 0 30px;}
 .article h6{font-size:1.2rem;line-height:1.2em;margin:42px 0 30px;font-weight: 700;}
 /*.ios.standalone .article h2{padding-top:36px;margin:0}*/
-.ios.standalone .article h3,.ios.standalone .article h4{padding-top:20px;margin-top:0}
-.article .headerlink{float:right;margin-left:20px;font-size:14px}
-h1 .article .headerlink{display:none}
+/*.ios.standalone .article h3,.ios.standalone .article h4{padding-top:20px;margin-top:0}*/
+/*.article .headerlink{float:right;margin-left:20px;font-size:14px}*/
+/*h1 .article .headerlink{display:none}*/
 .article ol,.article p,.article ul{margin-bottom:1em}
 .article ul {
   margin-left: 21px;
@@ -400,12 +401,12 @@ h1 .article .headerlink{display:none}
 .article img{max-width:100%}
 .article pre{padding:16px;margin:1.5em -16px 0;line-height:1.5em;overflow:auto;-webkit-overflow-scrolling:touch}
 .article table{margin:3em 0 1.5em;font-size:13px;overflow:hidden}
-.no-js .article table{display:inline-block;max-width:100%;overflow:auto;-webkit-overflow-scrolling:touch}
+/*.no-js .article table{display:inline-block;max-width:100%;overflow:auto;-webkit-overflow-scrolling:touch}*/
 .article table th{min-width:100px;font-size:12px;text-align:left}
 /*.article table td,.article table th{padding:12px 16px;vertical-align:top}*/
 .article blockquote{padding-left:16px}
-.article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
-.article .data table{display:inline-block;margin:0 16px;text-align:left}
+/*.article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
+.article .data table{display:inline-block;margin:0 16px;text-align:left}*/
 .nextpage {
   position: absolute;
   bottom: 33px;
