--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
             </div>
         </article>
     </main>
-    <footer class="footer" style="position:absolute; bottom:0px;">
+    <footer class="footer">
         {{ partial "footer" . }}
     </footer>
   </body>
