--- a/layouts/search_result/single.html
+++ b/layouts/search_result/single.html
@@ -1,6 +1,4 @@
 {{ partial "head" . }}
-<div class="backdrop"></div>
-
     <header class="header">
         {{ partial "header" . }}
     </header>
@@ -35,10 +33,11 @@
         </article>
                     {{ .Content }}
     </main>
-        
-    <footer class="footer" style="position:absolute; bottom:0px;">
+
+    <footer class="footer">
+        {{ partial "footer" . }}
     </footer>
-    
+
     <script type="text/javascript">
     !function(){
       var G = GALFSRAM = window.GALFSRAM || {}
