--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -52,7 +52,9 @@ pre,pre code{color:rgba(0,0,0,.87)}
 .js .header{-webkit-transition:background .6s,color .6s;transition:background .6s,color .6s}
 .js .header:before{-webkit-transition:background .6s;transition:background .6s}
 .button .icon{-webkit-transition:background .25s;transition:background .25s}*/
-body{color:#333;}
+body{
+  color:#333;
+}
 /*@supports (-webkit-appearance:none){body{background:#e84e40}
 }*/
 /*.ios body{background:#fff}
