--- a/layouts/shortcodes/tile.html
+++ b/layouts/shortcodes/tile.html
@@ -12,7 +12,7 @@
             {{- if eq (.Get "pdf_icon") "true" -}}
             <span class="fa fa-file-pdf-o"></span>
             {{- end -}}
-            {{- .Get "link_text" -}}<i class="fa fa-chevron-right" aria-hidden="true"></i>
+            <a href="{{- .Get "link_href" -}}" target="{{ .Scratch.Get "target" }}">{{- .Get "link_text" -}}</a><i class="fa fa-chevron-right" aria-hidden="true"></i>
         </div>
             <img class="tile-img" src="{{- .Get "img_src" -}}" alt="{{- .Get "img_alt" -}}"></img>
 </div>
