--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -55,7 +55,7 @@
     background-color: #FFFFFF;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
 }
-.col-tile a {
+.col-tile > a {
   display: block;
   position: absolute;
   width: 100%;
@@ -89,15 +89,12 @@
   z-index: 1;
 }
 
-.tile-right {
+/*.tile-right {
     position: relative;
     width: 50%;
     height: 100%;
     float: right;
-}
-
-.tile-base {
-}
+}*/
 
 .tile-img {
   position: absolute;
