--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -1,6 +1,6 @@
 html{box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box}
 *,:after,:before{box-sizing:inherit;-moz-box-sizing:inherit;-webkit-box-sizing:inherit}
-html{font-size:14px;line-height:1.5em;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;text-size-adjust:none}
+html{-webkit-text-size-adjust:none;-ms-text-size-adjust:none;text-size-adjust:none}
 a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,main,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0}
 main{display:block}
 /*ul{list-style:none}*/
@@ -24,7 +24,7 @@ pre,pre code{color:rgba(0,0,0,.87)}
   font-family: "STHeiti","Microsoft YaHei","Arial", "Helvetica Neue", "Helvetica", "Verdana", sans-serif;
 }
 .fa, .fas {
-  color: #777;
+  color: #0d89a2;
 }
 /*.c,.c1,.cm,.o{color:rgba(0,0,0,.54)}
 .k,.kn{color:#a71d5d}
@@ -52,9 +52,6 @@ pre,pre code{color:rgba(0,0,0,.87)}
 .js .header{-webkit-transition:background .6s,color .6s;transition:background .6s,color .6s}
 .js .header:before{-webkit-transition:background .6s;transition:background .6s}
 .button .icon{-webkit-transition:background .25s;transition:background .25s}*/
-body{
-  color:#333;
-}
 /*@supports (-webkit-appearance:none){body{background:#e84e40}
 }*/
 /*.ios body{background:#fff}
@@ -206,7 +203,7 @@ hr{border:0;border-top:1px solid rgba(0,0,0,.12)}
 /*.bar .path{color:hsla(0,0%,100%,.7)}*/
 /*.button .icon{border-radius:100%}
 .button .icon:active{background:hsla(0,0%,100%,.12)}*/
-html{height:100%}
+html{height:100%;color:#333;font-size:90%;line-height:1.5em;}
 body{position:relative;min-height:calc(100% - 56px);}
 /*hr{display:block;height:1px;padding:0;margin:0}*/
 /*.locked{height:100%;overflow:hidden}*/
@@ -402,9 +399,9 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 .article hr{margin-top:1.5em}
 .article img{max-width:100%}
 .article pre{padding:16px;margin:1.5em -16px 0;line-height:1.5em;overflow:auto;-webkit-overflow-scrolling:touch}
-.article table{margin:3em 0 1.5em;font-size:13px;overflow:hidden}
+.article table{margin:3em 0 1.5em;overflow:hidden;}
 /*.no-js .article table{display:inline-block;max-width:100%;overflow:auto;-webkit-overflow-scrolling:touch}*/
-.article table th{min-width:100px;font-size:12px;text-align:left}
+.article table th{min-width:100px;text-align:left;}
 /*.article table td,.article table th{padding:12px 16px;vertical-align:top}*/
 .article blockquote{padding-left:16px}
 /*.article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}
