--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -24,7 +24,7 @@ pre,pre code{color:rgba(0,0,0,.87)}
   font-family: "STHeiti","Microsoft YaHei","Arial", "Helvetica Neue", "Helvetica", "Verdana", sans-serif;
 }
 .fa, .fas {
-  color: #0d89a2;
+  color: #0D8199;
 }
 /*.c,.c1,.cm,.o{color:rgba(0,0,0,.54)}
 .k,.kn{color:#a71d5d}
@@ -282,7 +282,7 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 /*.copyright a{-webkit-transition:color .25s;transition:color .25s}*/
 /*.ios.standalone .article{background:-webkit-linear-gradient(top,#fff 50%,#e84e40 0);background:linear-gradient(180deg,#fff 50%,#e84e40 0)}
 .ios.standalone .article .wrapper{background:-webkit-linear-gradient(top,#fff 50%,#fff 0);background:linear-gradient(180deg,#fff 50%,#fff 0)}*/
-.article a {color: #2869ab}
+.article a {color: #0D8199}
 /*.article h1,.article h2{color:#e84e40}*/
 .article code{background:#eee}
 .article kbd{color:#555;background-color:#fcfcfc;border:1px solid #ccc;border-bottom-color:#bbb;border-radius:3px;box-shadow:inset 0 -1px 0 #bbb}
@@ -575,7 +575,7 @@ ul.breadcrumbs {
 }*/
 
 #TableOfContents a {
-   color: #2869ab;
+   color: #0D8199;
    text-decoration: none;
    border-bottom: 0px;
    display: block;
