--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -1,7 +1,9 @@
 .article .wrapper {
-    width: 100%;
     max-width: 100%;
-    padding: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 0;
+    margin: 18px 12px 12px 12px;
 }
 
 .article {
@@ -47,11 +49,11 @@
   position: relative;
 }
 .col-tile:hover {
-    -webkit-transform: scale(1.045);
-    -moz-transform: scale(1.045);
-    -ms-transform: scale(1.045);
-    -o-transform: scale(1.045);
-    transform: scale(1.045);
+    -webkit-transform: scale(1.015);
+    -moz-transform: scale(1.015);
+    -ms-transform: scale(1.015);
+    -o-transform: scale(1.015);
+    transform: scale(1.015);
     background-color: #FFFFFF;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
 }
@@ -142,29 +144,13 @@
 #hotArticles-showMore.expand{
     transform: rotate(180deg);
 }
-
-@media only screen and (max-width:850px) {
-  .hero{
-    display: none
-  }
-
-  .article .wrapper {
-
+@media only screen and (min-width:650px) {
+  .col-tile {
+    width: 46.8%;
+    margin: 0 1.6% 16px;
   }
 }
-
-@media only screen and (min-width:500px) {
-}
-
-
-@media only screen and (min-width:500px) {
-.col-tile {
-  width: 46.8%;
-  margin: 0 1.6% 16px;
-}
-}
-
-@media only screen and (min-width:850px) {
+@media only screen and (min-width:1000px) {
 .col-tile {
   margin: 0 .8% 16px;
   width: 31.7%;
