--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -71,6 +71,7 @@
     <script src="{{ "javascripts/modernizr.js" | absURL }}"></script>
     <script src="https://js.cybozu.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="{{ "javascripts/js.cookie.js" | absURL }}"></script>
+    <script src="{{ "javascripts/jquery.cookie.js" | absURL }}"></script>
     <script src="{{ "javascripts/transition.min.js" | absURL }}"></script>
     <script src="{{ "javascripts/zoom.js" | absURL }}"></script>
     <script src="{{ "javascripts/custom.js" | absURL }}"></script>
