--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -426,6 +426,7 @@ body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoo
 }
 .footer {
   position:absolute;
+  /*position: relative;*/
   background: #fff;
   bottom:0;
   left:0;
@@ -696,6 +697,72 @@ ul.breadcrumbs {
   display: block;
   border-bottom: none;
 }
+/* Enquete
+=========================================*/
+#enquete {
+  padding: 12px;
+  background-color: rgba(9,17,38,0.7);
+  color: #fff;
+  text-align: center;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  /*left: 0;*/
+  z-index: 100;
+  width: 400px;
+}
+.main {
+  padding: 1em 0 4em;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+#enqueteForm {
+  display: inline;
+}
+.enqueteBtn {
+  color: #333;
+  min-width: 65px;
+  height: 27px;
+  background: #eee;
+  border: none;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  display: inline-block;
+  cursor: pointer;
+}
+.enqueteBtn:hover {
+  background: #F8F8F8;
+}
+.enqueteBtn:focus {
+  outline-color: #f17900;
+}
+.btn_disabled {
+  background: #a8a8a8;
+  cursor: default;
+}
+.btn_disabled:hover {
+  background: #a8a8a8;
+}
+#additionnalEnquate {
+  max-width: 800px;
+  margin: auto;
+}
+#additionnalEnquate_textArea {
+  width: 100%;
+  height: 39px;
+  margin-top: 3px;
+}
+#additionnalEnquate_countChar {
+  float: right;
+}
+#enquete_note {
+  margin: 22px 0;
+}
+#enqueteThanks {
+  height: 27px;
+}
 /*@media only screen and (min-width:960px){
 
 }
@@ -730,11 +797,9 @@ ul.breadcrumbs {
 @media only screen and (min-width:480px){
 
 }*/
-@media only screen and (max-width:650px) {
-
-}
 @media only screen and (max-width:800px) {
-    #langselector {display:none;}
+    #langselector{display:none;}
+    #enquete{position:absolute !important;}
     .footer { display: block; }
     #footercenter {flex-direction: column;}
     #footercopyright {padding-top: 15px; width: 100%;}
@@ -749,7 +814,7 @@ ul.breadcrumbs {
 }
 
 @media only screen and (max-width:959px) {
-    .main { flex-direction: column-reverse; flex-wrap: wrap;}
+    /*.main { flex-direction: column-reverse; flex-wrap: wrap;}*/
     .article { background-color: #ffffff;}
     .drawer {position: relative; width: 100%; padding-top:0px;padding-bottom:30px; background-color: #f6f6f6; z-index: 1;}
     /*.backdrop,.backdrop-paper {display: none;}*/
@@ -763,7 +828,11 @@ ul.breadcrumbs {
   #sidebar-toc { display: none;}
 }
 
-@media print{.drawer,.footer,.header,.headerlink{display:none}
-
-    }
-
+@media print{
+  nav,header,footer {
+    display: none !important;
+  }
+  .font-ja {
+  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro","ＭＳ Ｐゴシック", "MS PGothic",sans-serif;
+  }
+}
